--- a/index.html
+++ b/index.html
@@ -277,12 +277,13 @@
 						</div>
 						<div class="single-experi">
 							<div class="left-text floatleft">
-								<h4 class="montserrat weight-medium mb-5 capitalize">KFUEIT,PK</h4>
-								<p class="montserrat weight-medium">2021</p>
+								<h4 class="montserrat weight-medium mb-5 capitalize">								<p class="montserrat weight-medium">2022</p>
+</h4>
+								<p class="montserrat weight-medium">2022</p>
 							</div>
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
-								<h3 class="capitalize font-20">Godesign, ISB, PK</h3>
+								<h3 class="capitalize font-20">UI UX Designer</h3>
 								<p>Develop Theory In Design and Practice In The World Of
 									Work. And Find Out What Designs Are Often Used. </p>
 							</div>
