--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 						</div>
 						<div class="single-experi">
 							<div class="left-text floatleft">
-								<h4 class="montserrat weight-medium mb-5 capitalize">								<p class="montserrat weight-medium">2022</p>
+								<h4 class="montserrat weight-medium mb-5 capitalize">	GODESIGN, ISB, PK </h4>							<p class="montserrat weight-medium">2022</p>
 </h4>
 								<p class="montserrat weight-medium">2022</p>
 							</div>
