--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 								<img src="assets/img/portfolio/w6.png" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="wmr.html">
+										<a href="insta.html">
 											<i class="zmdi zmdi-link"></i>
 										</a>
 									</div>
