--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<h1 class="mb-30">Muhammad Usman</h1>
 							<p class="font-16 line-height-28">
 								I’m a UI/UX Designer from Pakistan. I hold a master's degree in Computer Science from
-								the IUB. But I must explain to you how all this mistaken idea of.
+								the IUB. My aim is crafting digital experiences centered around understanding users' needs.
 							</p>
 							<div class="slider-button smooth-scroll mt-40">
 								<a class="btn lg-btn" href="#portfolio">my work</a>
@@ -264,15 +264,13 @@
 						<div class="single-experi mb-50">
 							<div class="left-text floatleft relative">
 								<div class="dashed-line"></div>
-								<h4 class="montserrat weight-medium mb-5 capitalize">Tech Partner, LHR, PK</h4>
+								<h4 class="montserrat weight-medium mb-5 capitalize">OMEGA TECH SOLUTION, LHR, PK</h4>
 								<p class="montserrat weight-medium">2023-PRESENT</p>
 							</div>
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
-								<h3 class="capitalize font-20">UI/UX Designer</h3>
-								<p>Plan and Conduct User Research and Competitor
-									Analysis,. Create User Stories, Personas, and Storyboards
-									Create Prototypes. </p>
+								<h3 class="capitalize font-20">SR. UI/UX Designer</h3>
+								<p>Plan and Conduct User Research and Competitor Analysis,. Create User Stories, Personas, and Storyboards Create Prototypes. </p>
 							</div>
 						</div>
 						<div class="single-experi">
@@ -296,8 +294,8 @@
 						<div class="single-experi mb-50">
 							<div class="left-text floatleft relative">
 								<div class="dashed-line"></div>
-								<h4 class="montserrat weight-medium mb-5 capitalize">Orbiqon, LHR, PK</h4>
-								<p class="montserrat weight-medium">2022</p>
+								<h4 class="montserrat weight-medium mb-5 capitalize">TECHPARTNER, LHR, PK</h4>
+								<p class="montserrat weight-medium">2023</p>
 							</div>
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
@@ -309,8 +307,8 @@
 						</div>
 						<div class="single-experi">
 							<div class="left-text floatleft">
-								<h4 class="montserrat weight-medium mb-5 capitalize">Freelancing</h4>
-								<p class="montserrat weight-medium">2021-PRESENT</p>
+								<h4 class="montserrat weight-medium mb-5 capitalize">OBRIQON, LHR, PK</h4>
+								<p class="montserrat weight-medium">2022</p>
 							</div>
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
@@ -394,7 +392,7 @@
 
 						<div class="grid-item new web gallery work3d percent-33">
 							<div class="single-portfolio overlay light-1 text-center">
-								<img src="assets/img/portfolio/w3.jpg" alt="Mim" />
+								<img src="assets\img\portfolio\vive.jpg" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
 										<a href="Ace Union Onboarding & Signup.html">
@@ -402,20 +400,19 @@
 										</a>
 									</div>
 									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Money Trasfer
-											mobile design</h4>
-										<p class="montserratlight">Mobile App</p>
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">vIVE TECH SOLUTION</h4>
+										<p class="montserratlight">WEB DESIGN </p>
 									</div>
 									<div class="zoom-icon">
-										<a href="moeny transfer.html">
+										<a href="vivetech.html">
 											<i class="zmdi zmdi-link"></i>
 										</a>
 									</div>
-									<div class="project-title text-left">
+									<!-- <div class="project-title text-left">
 										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Money Trasfer
 											mobile design</h4>
 										<p class="montserratlight">Mobile App</p>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
@@ -428,6 +425,7 @@
 										<!-- <a href="#">
 												<i class="zmdi zmdi-link"></i>
 											</a> -->
+									
 									</div>
 									<div class="project-title text-left">
 										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Portfolio
@@ -437,6 +435,8 @@
 								</div>
 							</div>
 						</div>
+
+						
 
 
 
@@ -521,16 +521,35 @@
 
 						<div class="grid-item new design web work3d percent-33">
 							<div class="single-portfolio overlay light-1 text-center">
-								<img src="assets\img\portfolio\s2.png" alt="Mim" />
+								<img src="assets\img\portfolio\vision.jpg" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="Phone Cleaner App.html">
+										<a href="vison.html">
 											<i class="zmdi zmdi-link"></i>
 										</a>
 									</div>
 									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Phone Cleaner
-											App</h4>
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">VISION 4 PRINT</h4>
+										<p class="montserratlight">WEB DESIGN</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+
+
+						<div class="grid-item new design web work3d percent-33">
+							<div class="single-portfolio overlay light-1 text-center">
+								<img src="assets\img\portfolio\vpn.jpg" alt="Mim" />
+								<div class="title plr-40 text-center">
+									<div class="zoom-icon">
+										<a href="vpn redesign.html">
+											<i class="zmdi zmdi-link"></i>
+										</a>
+									</div>
+									<div class="project-title text-left">
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">VPN REDESIGN</h4>
 										<p class="montserratlight">Mobile App</p>
 									</div>
 								</div>
@@ -837,7 +856,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="left floatleft">
-						<p>Copyright &copy; 2022 <a href="" target="_blank">Usman 2023</a>.</p>
+						<p>Copyright &copy; 2023 <a href="" target="_blank"></a></p>
 					</div>
 					<div class="right social-link floatright">
 						<ul class="clearfix">
