--- a/vpn redesign.html
+++ b/vpn redesign.html
@@ -107,42 +107,8 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-8">
 					<div class="portfolio-description single-post">
-						<h3 class="font-26 montserrat weight-medium capitalize">Mobile Cleaner App</h3>
-						<p>Background: <br>
-							A new startup is developing a mobile app aimed at helping users keep their phones clean and
-							optimized. The app, called Phone Cleaner, will scan the phone for unnecessary files,
-							duplicate files, and unused apps and provide users with options to clean them up and free up
-							storage space.<br>
-							Problem:<br> The startup wants to design a user-friendly and visually appealing mobile app
-							that
-							will effectively communicate the features and benefits of Phone Cleaner.
-
-							<br>User Research:<br> The design team conducted user research to understand the target
-							audience and
-							their pain points related to phone storage. This helped the team to identify the key
-							features and functions that would be important for users.
-							Wireframing: The team created wireframes to outline the basic structure
-							Visual Design: Based on the wireframes and user research, the design team created a visual
-							design that was modern, clean, and visually appealing. The visual design incorporated flat
-							design elements and bright, contrasting colours to make the app look polished and
-							professional.<br>
-							Icon Design:<br> Custom icons were created to help users easily identify different functions
-							and
-							features within the app. The icons were designed to be simple, clear, and easy to
-							understand.<br>
-							Typography:<br> A clean and modern typeface was selected to be used throughout the app, and
-							clear, legible typography was used to ensure that the app was easy to read and understand.
-							Interaction Design: The team worked to ensure that the app was intuitive and easy to use.
-							This was achieved by incorporating clear and concise on-screen instructions and by designing
-							interactions that were straightforward to follow.<br>
-							Interaction Design: <br> The interaction design of Phone Cleaner was developed with a focus on
-							ease of use and intuitive navigation. The design team created animations and visual effects
-							to help users understand the app’s functions and to create a more engaging experience.
-							<br>Testing:<br> The app was tested with users to ensure that it was user-friendly and that
-							it
-							effectively communicated the features and benefits of Phone Cleaner. Feedback was used to
-							make improvements to the design, and to ensure that the app was meeting the needs of the
-							target audience.
+						<h3 class="font-26 montserrat weight-medium capitalize">VPN APP REDESIGN</h3>
+						<p>
 						</p>
 					</div>
 				</div>
@@ -150,19 +116,19 @@
 					<div class="portfolio-sidebar pt-45">
 						<ul>
 							<li><span>Client :</span>
-								<p>Techpartner</p>
+								<p>TEACH PARTNER</p>
 							</li>
 							<li><span>Created By :</span>
 								<p> Muhammad Usman</p>
 							</li>
 							<li><span>Completed :</span>
-								<p>05 Feb 2023</p>
+								<p>11 JAN 2023</p>
 							</li>
 							<li><span>Skill :</span>
 								<p>Figma </p>
 							</li>
 							<li><span>Services :</span>
-								<p>Mobile App design</p>
+								<p>MOBILE DESIGN</p>
 							</li>
 						</ul>
 					</div>
@@ -173,23 +139,45 @@
 					<div class="project-gallery pt-80">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/s1.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/s1.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/vpn01.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/vpn01.jpg" alt="Project Image" />
 								</a>
 							</div>
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/s2.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/s2.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/vpn02.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/vpn02.jpg" alt="Project Image" />
 								</a>
 							</div>
-						</div>
-						<div class="row">
 
 						</div>
+
+					</div>
+					<div class="row">
+						<h3 class="font-26 montserrat weight-medium capitalize">VPN App Redsign </h3>
+						<p><br>Introduction:<br>This project involved redesigning a VPN mobile app for Android to enhance the user experience and visualize complex features related to internet security and privacy.<br><br>
+
+							User Research:<br>To understand areas for improvement, I reviewed app store ratings, conducted user interviews, analyzed support tickets, and identified UX pain points related to onboarding, settings, and notifications.
+							<br><br>Information Architecture:<br>Based on research, I developed a new sitemap and user flow tailoring the IA to essential user journeys for securing browsing, checking connection status, changing locations, etc.
+
+
+
+
+
+							<br><br>Interaction Design:<br> I wireframed key screens like onboarding, the main VPN dashboard, connection settings, speed test screens, and account management. This focused on exposing core functionality clearly.
+
+
+							<br><br>Visual Design:<br>For visuals, I explored color, iconography, and typography that reflected the modern, tech-forward brand. I applied motions like animated illustrations to add delight.
+
+							The redesigned app simplifies complex features like speed test results and server switching in an engaging way users understand. The UI provides a seamless experience securing privacy.
+
+
+						</p>
+
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 	<!-- Footer Section End -->
 	<!-- Footer Section Start -->
