--- a/insta.html
+++ b/insta.html
@@ -179,7 +179,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="left floatleft">
-						<p>Copyright &copy; 2022 <a href="" target="_blank">engr_shaniii</a>.</p>
+						<p>Copyright &copy; 2023 <a href="" target="_blank"></a>.</p>
 					</div>
 					<div class="right social-link floatright">
 						<ul class="clearfix">
