--- a/vison.html
+++ b/vison.html
@@ -107,42 +107,8 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-8">
 					<div class="portfolio-description single-post">
-						<h3 class="font-26 montserrat weight-medium capitalize">Mobile Cleaner App</h3>
-						<p>Background: <br>
-							A new startup is developing a mobile app aimed at helping users keep their phones clean and
-							optimized. The app, called Phone Cleaner, will scan the phone for unnecessary files,
-							duplicate files, and unused apps and provide users with options to clean them up and free up
-							storage space.<br>
-							Problem:<br> The startup wants to design a user-friendly and visually appealing mobile app
-							that
-							will effectively communicate the features and benefits of Phone Cleaner.
-
-							<br>User Research:<br> The design team conducted user research to understand the target
-							audience and
-							their pain points related to phone storage. This helped the team to identify the key
-							features and functions that would be important for users.
-							Wireframing: The team created wireframes to outline the basic structure
-							Visual Design: Based on the wireframes and user research, the design team created a visual
-							design that was modern, clean, and visually appealing. The visual design incorporated flat
-							design elements and bright, contrasting colours to make the app look polished and
-							professional.<br>
-							Icon Design:<br> Custom icons were created to help users easily identify different functions
-							and
-							features within the app. The icons were designed to be simple, clear, and easy to
-							understand.<br>
-							Typography:<br> A clean and modern typeface was selected to be used throughout the app, and
-							clear, legible typography was used to ensure that the app was easy to read and understand.
-							Interaction Design: The team worked to ensure that the app was intuitive and easy to use.
-							This was achieved by incorporating clear and concise on-screen instructions and by designing
-							interactions that were straightforward to follow.<br>
-							Interaction Design: <br> The interaction design of Phone Cleaner was developed with a focus on
-							ease of use and intuitive navigation. The design team created animations and visual effects
-							to help users understand the app’s functions and to create a more engaging experience.
-							<br>Testing:<br> The app was tested with users to ensure that it was user-friendly and that
-							it
-							effectively communicated the features and benefits of Phone Cleaner. Feedback was used to
-							make improvements to the design, and to ensure that the app was meeting the needs of the
-							target audience.
+						<h3 class="font-26 montserrat weight-medium capitalize">Vision 4 Print</h3>
+						<p>
 						</p>
 					</div>
 				</div>
@@ -150,19 +116,19 @@
 					<div class="portfolio-sidebar pt-45">
 						<ul>
 							<li><span>Client :</span>
-								<p>Techpartner</p>
+								<p>OMEGA TECH SOLUTION</p>
 							</li>
 							<li><span>Created By :</span>
 								<p> Muhammad Usman</p>
 							</li>
 							<li><span>Completed :</span>
-								<p>05 Feb 2023</p>
+								<p>22 JUN 2022</p>
 							</li>
 							<li><span>Skill :</span>
 								<p>Figma </p>
 							</li>
 							<li><span>Services :</span>
-								<p>Mobile App design</p>
+								<p>WEB Design </p>
 							</li>
 						</ul>
 					</div>
@@ -173,23 +139,59 @@
 					<div class="project-gallery pt-80">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/s1.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/s1.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/vision1.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/vision1.jpg" alt="Project Image" />
 								</a>
 							</div>
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/s2.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/s2.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/vision2.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/vision2.jpg" alt="Project Image" />
 								</a>
 							</div>
-						</div>
-						<div class="row">
 
 						</div>
+
+					</div>
+					<div class="row">
+						<h3 class="font-26 montserrat weight-medium capitalize">Vision 4 print </h3>
+						<p><br>Introduction:<br> This project involved redesigning the website for Vision4Print, a
+							printing services company, in order to modernize the aesthetics, amplify the brand, and
+							enhance user experience.<br><br>
+
+							User Research:<br>To identify areas for improvement, I first conducted stakeholder
+							interviews, reviewed web analytics, and analyzed competitor sites. Key issues found included
+							outdated visuals, cluttered layouts, and weak brand expression.
+							<br><br>UX Design:<br>I started by optimizing the information architecture and creating new
+							user flows tailored to customer journeys based on research findings. This provided an
+							improved navigational structure.
+
+
+
+
+
+							<br><br>Visual Design:<br> For the visual redesign, I explored style tile concepts focused
+							on minimalist, sophisticated aesthetics that better conveyed the brand essence. I refined
+							typography, color scheme, spacing, imagery, and created high-fidelity visual comps in Figma.
+
+
+
+							<br><br>Results:<br>The redesigned Vision4Print website featured a streamlined, uncluttered
+							interface with refined typography and ample negative space. The cohesive visual style
+							provides a premium, yet approachable feel.
+
+							Please let me know if I should expand or modify any part of this case study draft. I can go
+							into more detail on specific UX issues uncovered, design iterations and solutions, or
+							provide before/after examples. Let me know what else would help demonstrate the value
+							delivered through this website redesign project.
+
+
+						</p>
+
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 	<!-- Footer Section End -->
 	<!-- Footer Section Start -->
