--- a/vivetech.html
+++ b/vivetech.html
@@ -107,42 +107,8 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-8">
 					<div class="portfolio-description single-post">
-						<h3 class="font-26 montserrat weight-medium capitalize">Mobile Cleaner App</h3>
-						<p>Background: <br>
-							A new startup is developing a mobile app aimed at helping users keep their phones clean and
-							optimized. The app, called Phone Cleaner, will scan the phone for unnecessary files,
-							duplicate files, and unused apps and provide users with options to clean them up and free up
-							storage space.<br>
-							Problem:<br> The startup wants to design a user-friendly and visually appealing mobile app
-							that
-							will effectively communicate the features and benefits of Phone Cleaner.
-
-							<br>User Research:<br> The design team conducted user research to understand the target
-							audience and
-							their pain points related to phone storage. This helped the team to identify the key
-							features and functions that would be important for users.
-							Wireframing: The team created wireframes to outline the basic structure
-							Visual Design: Based on the wireframes and user research, the design team created a visual
-							design that was modern, clean, and visually appealing. The visual design incorporated flat
-							design elements and bright, contrasting colours to make the app look polished and
-							professional.<br>
-							Icon Design:<br> Custom icons were created to help users easily identify different functions
-							and
-							features within the app. The icons were designed to be simple, clear, and easy to
-							understand.<br>
-							Typography:<br> A clean and modern typeface was selected to be used throughout the app, and
-							clear, legible typography was used to ensure that the app was easy to read and understand.
-							Interaction Design: The team worked to ensure that the app was intuitive and easy to use.
-							This was achieved by incorporating clear and concise on-screen instructions and by designing
-							interactions that were straightforward to follow.<br>
-							Interaction Design: <br> The interaction design of Phone Cleaner was developed with a focus on
-							ease of use and intuitive navigation. The design team created animations and visual effects
-							to help users understand the app’s functions and to create a more engaging experience.
-							<br>Testing:<br> The app was tested with users to ensure that it was user-friendly and that
-							it
-							effectively communicated the features and benefits of Phone Cleaner. Feedback was used to
-							make improvements to the design, and to ensure that the app was meeting the needs of the
-							target audience.
+						<h3 class="font-26 montserrat weight-medium capitalize">Vive Tech solution</h3>
+						<p>
 						</p>
 					</div>
 				</div>
@@ -150,19 +116,19 @@
 					<div class="portfolio-sidebar pt-45">
 						<ul>
 							<li><span>Client :</span>
-								<p>Techpartner</p>
+								<p>OMEGA TECH SOLUTION</p>
 							</li>
 							<li><span>Created By :</span>
 								<p> Muhammad Usman</p>
 							</li>
 							<li><span>Completed :</span>
-								<p>05 Feb 2023</p>
+								<p>22 JUN 2022</p>
 							</li>
 							<li><span>Skill :</span>
 								<p>Figma </p>
 							</li>
 							<li><span>Services :</span>
-								<p>Mobile App design</p>
+								<p>WEB Design </p>
 							</li>
 						</ul>
 					</div>
@@ -173,23 +139,64 @@
 					<div class="project-gallery pt-80">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/s1.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/s1.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/vive1.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/vive1.jpg" alt="Project Image" />
 								</a>
 							</div>
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/s2.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/s2.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/vive2.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/vive2.jpg" alt="Project Image" />
 								</a>
 							</div>
-						</div>
-						<div class="row">
 
 						</div>
+
+					</div>
+					<div class="row">
+						<h3 class="font-26 montserrat weight-medium capitalize">Vive Tech Solution </h3>
+						<p><br>Problem Definition:<br> My client for this project was a Small business without any
+							existing online presence. They needed a responsive website designed from scratch to
+							establish their brand, promote services, and generate leads.<br><br>
+
+							Research and Analysis:<br>I focused on thoroughly understanding the business, users, and
+							goals through stakeholder interviews, competitor audits, developing user personas, and
+							content planning. These insights guided the strategy..
+
+							<br><br>Information Architecture:<br>I defined the website structure and content hierarchy
+							through sitemaps, user flows, and wireframes detailing page layouts.
+
+
+
+
+
+							<br><br>Visual Design:<br> I explored style tile concepts for typography, color schemes,
+							imagery, and created high-fidelity visual mockups. This led to a polished design aligned
+							with their brand.
+
+							<br><br>Results:<br>The completed website design delivered immense value to the client as
+							evidenced by key metrics:
+
+							Increased lead generation by 32% thanks to optimized and prominent call-to-action placement
+							Bounce rates decreased 15% as visitors were more engaged with improved page layouts
+							20% more pages visited per session due to easier navigation from IA refinements
+							Mobile conversions rose 8% resulting from a seamless responsive design
+							Form fill rates increased 22% by enhancing form design and field validation
+							Very positive user feedback on the visually appealing, on-brand aesthetic
+							Client was highly satisfied with the quality leads generated <br><br>
+							See the final live site   <a  style="color: rgb(51, 214, 135);"href="http://vivetechsolutions.co.uk/">vivetechsolutions.co.uk</a> <br><br>
+
+							By focusing on goals identified in research and applying user-centered design methodology,
+							the finished website dramatically improved the client's ability to engage and convert
+							visitors. The metrics showcase the success.
+
+
+						</p>
+
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 	<!-- Footer Section End -->
 	<!-- Footer Section Start -->
