--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@
 						<div class="single-experi mb-50">
 							<div class="left-text floatleft relative">
 								<div class="dashed-line"></div>
-								<h4 class="montserrat weight-medium mb-5 capitalize">OMEGA TECH SOLUTION, LHR, PK</h4>
+								<h4 class="montserrat weight-medium mb-5 capitalize">Vive Printing, LHR, PK</h4>
 								<p class="montserrat weight-medium">2023-PRESENT</p>
 							</div>
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
-								<h3 class="capitalize font-20">SR. UI/UX Designer</h3>
-								<p>Plan and Conduct User Research and Competitor Analysis,. Create User Stories, Personas, and Storyboards Create Prototypes. </p>
-							</div>
+								<h3 class="capitalize font-20">UI/UX Designer</h3>
+								<p>Innovative UI/UX Designer at Omega Tech Solutions dedicated to creating seamless user experiences through research-driven design. Led projects from planning to execution, conducting stakeholder interviews, developing personas and sitemaps,
+									prototyping interactions, and testing usability.</div>
 						</div>
 						<div class="single-experi">
 							<div class="left-text floatleft">
@@ -282,9 +282,9 @@
 							</div>
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
-								<h3 class="capitalize font-20">UI UX Designer</h3>
-								<p>Develop Theory In Design and Practice In The World Of
-									Work. And Find Out What Designs Are Often Used. </p>
+								<h3 class="capitalize font-20">UI Designer</h3>
+								<p>Innovative UI Designer at GODesign focused on crafting visually compelling and user-friendly interfaces. Led efforts to
+									design Talent Hunt web portal through wireframing, prototyping, and creating visual assets. </p>
 							</div>
 						</div>
 					</div>
@@ -300,9 +300,8 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20"> UI UX Designer</h3>
-								<p>Produced A Creative Website Layouting, Created Design,
-									Concept and Sample Layout, Developed Graphic Design
-									and Layout For Product Illustrations </p>
+								<p>Creative and skilled UI/UX Designer at TechPartner specializing in translating brand identity into visually appealing user
+									interfaces. Collaborated closely with UX team on Vive Tech website redesign to harmonize UI with enhanced user flows.</p>
 							</div>
 						</div>
 						<div class="single-experi">
@@ -313,8 +312,8 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20">UI UX Designer</h3>
-								<p>Contributed ideas for brand campaigns
-									Responsible for designed visually compelling digital and print project </p>
+								<p>Skilled UI/UX Designer at Orbiqon committed to enhancing digital products through intuitive yet visually engaging interfaces. Led mobile UI design for All-in-One PDF app focused on usability and simplicity. Developed comprehensive style guide
+									and component library aligned with Orbiqon's brand standards </p>
 							</div>
 						</div>
 					</div>
@@ -419,18 +418,17 @@
 
 						<div class="grid-item new web gallery work3d percent-33">
 							<div class="single-portfolio overlay light-1 text-center">
-								<img src="assets/img/portfolio/personal website template.jpg" alt="Mim" />
+								<img src="assets/img/portfolio/pdfreader.jpg" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<!-- <a href="#">
+										<a href="pdfreader.html">
 												<i class="zmdi zmdi-link"></i>
-											</a> -->
+											</a>
 									
 									</div>
 									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Portfolio
-											Landing page Figma Design</h4>
-										<p class="montserratlight">Personal Website</p>
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">PDF Reader & Scanner</h4>
+										<p class="montserratlight">Mobile App</p>
 									</div>
 								</div>
 							</div>
@@ -491,8 +489,8 @@
 									</div>
 									<div class="project-title text-left">
 										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Food chef
-											Mobile app</h4>
-										<p class="montserratlight">Visual design</p>
+											</h4>
+										<p class="montserratlight">Mobile App</p>
 									</div>
 								</div>
 							</div>
@@ -510,8 +508,25 @@
 										</a>
 									</div>
 									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Talent Hunt
-											Programe</h4>
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin"> Vive Printing</h4>
+										<p class="montserratlight">Web Desgin</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="grid-item new design web work3d percent-33">
+							<div class="single-portfolio overlay light-1 text-center">
+								<img src="assets/img/portfolio/mycusompackagingt.jpg" alt="Mim" />
+								<div class="title plr-40 text-center">
+									<div class="zoom-icon">
+										<a href="mycustompackaging.html">
+											<i class="zmdi zmdi-link"></i>
+										</a>
+									</div>
+									<div class="project-title text-left">
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">My Custom Packaging</h4>
 										<p class="montserratlight">Web Desgin</p>
 									</div>
 								</div>
