--- a/mycustompackaging.html
+++ b/mycustompackaging.html
@@ -107,8 +107,39 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-8">
 					<div class="portfolio-description single-post">
-						<h3 class="font-26 montserrat weight-medium capitalize">Vive Tech solution</h3>
+						<h3 class="font-26 montserrat weight-medium capitalize">mycustompackaging</h3>
 						<p>
+							Mycustompackaging.com engaged us to redesign their existing website to improve usability
+							issues and modernize the customer experience. As a leading provider of custom packaging
+							solutions, having an intuitive and visually appealing website is crucial to their business.
+						</p>
+						<p>
+							 Goals:<br>
+
+							Improve findability of products and information
+							Streamline purchasing process
+							Establish cohesive brand identity
+							Enhance visual design for modern look and feel
+							<br>Approach:<br>
+
+							Conducted heuristic analysis of existing site to identify usability pain points
+							Performed competitor benchmarking to analyze best practices
+							Created user personas and customer journey maps to focus redesign
+							Developed information architecture and redesigned workflows
+							Designed high-fidelity responsive visual mockups tailored to user goals
+							Implemented UI using HTML, CSS and JavaScript based on approved designs
+							<br>Results:
+							<br>The redesigned website elevates the user experience through:<br>
+
+							Improved navigation and findability
+							More intuitive category structure
+							Seamless cross-device responsiveness
+							Appealing visual brand identity
+							Increased conversion rate performance
+							The new site establishes mycustompackaging.com as an innovative leader in packaging
+							solutions with a focus on customer experience. The user-centered design provides a seamless
+							journey across devices. Beautiful aesthetics establish cohesive brand identity. The
+							data-driven approach resulted in a design optimized for site metrics.
 						</p>
 					</div>
 				</div>
@@ -116,19 +147,19 @@
 					<div class="portfolio-sidebar pt-45">
 						<ul>
 							<li><span>Client :</span>
-								<p>OMEGA TECH SOLUTION</p>
+								<p>Vive Tech Solution</p>
 							</li>
 							<li><span>Created By :</span>
 								<p> Muhammad Usman</p>
 							</li>
 							<li><span>Completed :</span>
-								<p>22 JUN 2022</p>
+								<p>28 SEP 2023</p>
 							</li>
 							<li><span>Skill :</span>
 								<p>Figma </p>
 							</li>
 							<li><span>Services :</span>
-								<p>WEB Design </p>
+								<p>Web Design</p>
 							</li>
 						</ul>
 					</div>
@@ -139,111 +170,82 @@
 					<div class="project-gallery pt-80">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/vive1.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/vive1.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/mycustompackaging01.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/mycustompackaging01.jpg" alt="Project Image" />
 								</a>
 							</div>
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/vive2.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/vive2.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/mycustompackaging02.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/mycustompackaging02.jpg" alt="Project Image" />
 								</a>
 							</div>
 
+
+
+							<div class="col-xs-12 col-sm-6 mb-30">
+								<a href="assets/img/portfolio/details/mycustompackaging03.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/mycustompackaging03.jpg" alt="Project Image" />
+								</a>
+							</div>
+
+							<div class="col-xs-12 col-sm-6 mb-30">
+								<a href="assets/img/portfolio/details/mycustompackaging04.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/mycustompackaging04.jpg" alt="Project Image" />
+								</a>
+
+
+							</div>
 						</div>
-
-					</div>
-					<div class="row">
-						<h3 class="font-26 montserrat weight-medium capitalize">Vive Tech Solution </h3>
-						<p><br>Problem Definition:<br> My client for this project was a Small business without any
-							existing online presence. They needed a responsive website designed from scratch to
-							establish their brand, promote services, and generate leads.<br><br>
-
-							Research and Analysis:<br>I focused on thoroughly understanding the business, users, and
-							goals through stakeholder interviews, competitor audits, developing user personas, and
-							content planning. These insights guided the strategy..
-
-							<br><br>Information Architecture:<br>I defined the website structure and content hierarchy
-							through sitemaps, user flows, and wireframes detailing page layouts.
-
-
-
-
-
-							<br><br>Visual Design:<br> I explored style tile concepts for typography, color schemes,
-							imagery, and created high-fidelity visual mockups. This led to a polished design aligned
-							with their brand.
-
-							<br><br>Results:<br>The completed website design delivered immense value to the client as
-							evidenced by key metrics:
-
-							Increased lead generation by 32% thanks to optimized and prominent call-to-action placement
-							Bounce rates decreased 15% as visitors were more engaged with improved page layouts
-							20% more pages visited per session due to easier navigation from IA refinements
-							Mobile conversions rose 8% resulting from a seamless responsive design
-							Form fill rates increased 22% by enhancing form design and field validation
-							Very positive user feedback on the visually appealing, on-brand aesthetic
-							Client was highly satisfied with the quality leads generated <br><br>
-							See the final live site   <a  style="color: rgb(51, 214, 135);"href="http://vivetechsolutions.co.uk/" target="_blank">vivetechsolutions.co.uk</a> <br><br>
-
-							By focusing on goals identified in research and applying user-centered design methodology,
-							the finished website dramatically improved the client's ability to engage and convert
-							visitors. The metrics showcase the success.
-
-
-						</p>
-
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	</div>
-	<!-- Footer Section End -->
-	<!-- Footer Section Start -->
-	<footer class="footer bg-color-1 ptb-20">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12">
-					<div class="left floatleft">
-						<p>Copyright &copy; 2023 <a href="" target="_blank"></a>.</p>
-					</div>
-					<div class="right social-link floatright">
-						<ul class="clearfix">
-							<li><a href="mailto:engrshaniii@gmail.com" target="_blank">Email</a></li>
-							<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
-							<li class="fa fa-whatsapp" aria-hidden="true"><a href="https://wa.me/%2B923143586834"
-									target="_blank">Chat on Whatsapp</a></li>
-						</ul>
+		<!-- Footer Section End -->
+		<!-- Footer Section Start -->
+		<footer class="footer bg-color-1 ptb-20">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="left floatleft">
+							<p>Copyright &copy; 2023 <a href="" target="_blank"></a>.</p>
+						</div>
+						<div class="right social-link floatright">
+							<ul class="clearfix">
+								<li><a href="mailto:engrshaniii@gmail.com" target="_blank">Email</a></li>
+								<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
+								<li class="fa fa-whatsapp" aria-hidden="true"><a href="https://wa.me/%2B923143586834"
+										target="_blank">Chat on Whatsapp</a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
-	<!-- Footer Section End -->
+		</footer>
+		<!-- Footer Section End -->
 
-	<!-- All JS Here -->
-	<!-- jQuery Latest Version -->
-	<script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
-	<!-- Bootstrap JS -->
-	<script src="assets/js/bootstrap.min.js"></script>
-	<!-- One Page Nav JS -->
-	<script src="assets/js/one-page-nav.js"></script>
-	<!-- Waypoints JS -->
-	<script src="assets/js/waypoints.min.js"></script>
-	<!-- Progressbar JS -->
-	<script src="assets/js/progressbar.js"></script>
-	<!-- Isotope -->
-	<script src="assets/js/isotope.pkgd.js"></script>
-	<!-- Isotope -->
-	<script src="assets/js/jquery.validate.min.js"></script>
-	<!-- Slick Slider JS -->
-	<script src="assets/js/slick.min.js"></script>
-	<!-- Fancybox JS -->
-	<script src="assets/js/jquery.fancybox.pack.js"></script>
-	<!-- Plugins JS -->
-	<script src="assets/js/plugins.js"></script>
-	<!-- main JS -->
-	<script src="assets/js/main.js"></script>
+		<!-- All JS Here -->
+		<!-- jQuery Latest Version -->
+		<script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
+		<!-- Bootstrap JS -->
+		<script src="assets/js/bootstrap.min.js"></script>
+		<!-- One Page Nav JS -->
+		<script src="assets/js/one-page-nav.js"></script>
+		<!-- Waypoints JS -->
+		<script src="assets/js/waypoints.min.js"></script>
+		<!-- Progressbar JS -->
+		<script src="assets/js/progressbar.js"></script>
+		<!-- Isotope -->
+		<script src="assets/js/isotope.pkgd.js"></script>
+		<!-- Isotope -->
+		<script src="assets/js/jquery.validate.min.js"></script>
+		<!-- Slick Slider JS -->
+		<script src="assets/js/slick.min.js"></script>
+		<!-- Fancybox JS -->
+		<script src="assets/js/jquery.fancybox.pack.js"></script>
+		<!-- Plugins JS -->
+		<script src="assets/js/plugins.js"></script>
+		<!-- main JS -->
+		<script src="assets/js/main.js"></script>
 </body>
 
 <!-- Mirrored from regaltheme.com/tf/onepage/mim/mim/light-portfolio-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 01 Dec 2022 15:15:56 GMT -->
