--- a/pdfreader.html
+++ b/pdfreader.html
@@ -107,28 +107,51 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-8">
 					<div class="portfolio-description single-post">
-						<h3 class="font-26 montserrat weight-medium capitalize">Vive Tech solution</h3>
+						<h3 class="font-26 montserrat weight-medium capitalize">PDF Reader & Scanner</h3>
 						<p>
-						</p>
+							ur client, an established software company, engaged us to design a next-generation PDF
+							management app providing tools for scanning, editing, converting, signing and annotating
+							PDFs. <br>
+
+							The goal was creating an intuitive, user-friendly interface optimized for mobile devices. We
+							conducted market analysis and benchmarking to uncover unmet user needs and opportunities to
+							differentiate through UX. <br>
+
+							Our UX research included interviews with target users which informed customer personas and
+							usage scenarios. We translated findings into app architecture and workflow. The sitemap
+							prioritizes critical tasks while minimizing steps for efficiency.<br>
+
+							The UI provides consistent, platform-native controls for familiarity. Clean layouts and
+							visual hierarchy guide users. Illustrations and empty states enhance comprehension. A
+							versatile scanner leverages ML for document capture. The OCR and annotation capabilities
+							deliver productivity.<br>
+
+							We tailored the interface around key tasks like scanning multi-page documents, eSigning
+							contracts, compressing files, and converting PDFs into other formats. The result is an
+							uncluttered yet powerful design enabling personal and professional document management. <br>
+
+							Through our human-centered design process, we crafted an intuitive, user-focused interface
+							that revolutionizes managing PDFs on mobile. The app received outstanding feedback from user
+							testing for its ease of use and versatility.
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4">
 					<div class="portfolio-sidebar pt-45">
 						<ul>
 							<li><span>Client :</span>
-								<p>OMEGA TECH SOLUTION</p>
+								<p>Tech Partner</p>
 							</li>
 							<li><span>Created By :</span>
 								<p> Muhammad Usman</p>
 							</li>
 							<li><span>Completed :</span>
-								<p>22 JUN 2022</p>
+								<p>10 Mar 2023</p>
 							</li>
 							<li><span>Skill :</span>
 								<p>Figma </p>
 							</li>
 							<li><span>Services :</span>
-								<p>WEB Design </p>
+								<p>Mobile Design</p>
 							</li>
 						</ul>
 					</div>
@@ -139,64 +162,35 @@
 					<div class="project-gallery pt-80">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/vive1.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/vive1.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/pdf01.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/pdf01.jpg" alt="Project Image" />
 								</a>
 							</div>
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/vive2.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/vive2.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/pdf02.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/pdf02.jpg" alt="Project Image" />
+								</a>
+							</div>
+							<div class="col-xs-12 col-sm-6 mb-30">
+								<a href="assets/img/portfolio/details/pdf03.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/pdf03.jpg" alt="Project Image" />
+								</a>
+							</div>
+							<div class="col-xs-12 col-sm-6 mb-30">
+								<a href="assets/img/portfolio/details/pdf04.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/pdf04.jpg" alt="Project Image" />
 								</a>
 							</div>
 
+
 						</div>
+						<div class="row">
 
-					</div>
-					<div class="row">
-						<h3 class="font-26 montserrat weight-medium capitalize">Vive Tech Solution </h3>
-						<p><br>Problem Definition:<br> My client for this project was a Small business without any
-							existing online presence. They needed a responsive website designed from scratch to
-							establish their brand, promote services, and generate leads.<br><br>
-
-							Research and Analysis:<br>I focused on thoroughly understanding the business, users, and
-							goals through stakeholder interviews, competitor audits, developing user personas, and
-							content planning. These insights guided the strategy..
-
-							<br><br>Information Architecture:<br>I defined the website structure and content hierarchy
-							through sitemaps, user flows, and wireframes detailing page layouts.
-
-
-
-
-
-							<br><br>Visual Design:<br> I explored style tile concepts for typography, color schemes,
-							imagery, and created high-fidelity visual mockups. This led to a polished design aligned
-							with their brand.
-
-							<br><br>Results:<br>The completed website design delivered immense value to the client as
-							evidenced by key metrics:
-
-							Increased lead generation by 32% thanks to optimized and prominent call-to-action placement
-							Bounce rates decreased 15% as visitors were more engaged with improved page layouts
-							20% more pages visited per session due to easier navigation from IA refinements
-							Mobile conversions rose 8% resulting from a seamless responsive design
-							Form fill rates increased 22% by enhancing form design and field validation
-							Very positive user feedback on the visually appealing, on-brand aesthetic
-							Client was highly satisfied with the quality leads generated <br><br>
-							See the final live site   <a  style="color: rgb(51, 214, 135);"href="http://vivetechsolutions.co.uk/" target="_blank">vivetechsolutions.co.uk</a> <br><br>
-
-							By focusing on goals identified in research and applying user-centered design methodology,
-							the finished website dramatically improved the client's ability to engage and convert
-							visitors. The metrics showcase the success.
-
-
-						</p>
-
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</div>
 	<!-- Footer Section End -->
 	<!-- Footer Section Start -->
