--- a/vison.html
+++ b/vison.html
@@ -179,7 +179,10 @@
 							interface with refined typography and ample negative space. The cohesive visual style
 							provides a premium, yet approachable feel.
 
-							
+							Please let me know if I should expand or modify any part of this case study draft. I can go
+							into more detail on specific UX issues uncovered, design iterations and solutions, or
+							provide before/after examples. Let me know what else would help demonstrate the value
+							delivered through this website redesign project.
 
 
 						</p>
